...

    <Spinner
        android:id="@+id/spinner_settings_team"
        android:layout_width="222dp"
        android:layout_height="48dp"
        android:contentDescription="@string/team"
        app:layout_constraintStart_toStartOf="@+id/usernameEditText"
        app:layout_constraintTop_toBottomOf="@+id/settings_team_textView" />

    <TextView
        android:id="@+id/settings_team_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.35"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_settings_activity_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="208dp"
        android:text="@string/saveSettingsButton"
        app:layout_constraintEnd_toEndOf="parent"
...
